--- a/client/src/components/Navbar/Dropdown/Dropdown.scss
+++ b/client/src/components/Navbar/Dropdown/Dropdown.scss
@@ -9,7 +9,7 @@
         padding: 0;
         background-color: inherit;
         border: 0;
-        color: black;
+        color: white;
         cursor: pointer;
         outline: 0;
         font-size: 30px;
