--- a/client/src/components/Navbar/Navbar.scss
+++ b/client/src/components/Navbar/Navbar.scss
@@ -5,13 +5,16 @@
     
     .navMenu{
         display: grid;
+        align-items: center;
         background-color:rgba(27, 63, 29, 0.692);
         grid-column-start: 1; 
         grid-column-end: 6; 
         
         .logo {
+            text-decoration: none;
             width: 100%;
-            font-size: 28px; 
+            font-size: 32px; 
+            padding: 0 10px;
             font-weight: bold;
             grid-column-end: 2; 
             color: white;
@@ -20,27 +23,24 @@
         .cartIcon {
             display: grid;
             grid-column-start: 6; 
-            justify-content: center;
+            font-size: 20px;
 
             span {
                 width: 100%;
             }
 
-            span:hover {
-                background-color:rgba(15, 29, 16, 0.692); 
-            }  
+            // span:hover {
+            //     background-color:rgba(15, 29, 16, 0.692); 
+            // }  
 
         }
 
         span { 
-            text-align: center;
-            width: 20%;
-            padding: 8px 0;
+           text-align: center;
 
             a {
                 text-decoration: none;
                 color: white;
-                font-size: 20px; 
                 font-weight: bold;
             }
         }
