--- a/client/src/components/Navbar/Dropdown/Dropdown.scss
+++ b/client/src/components/Navbar/Dropdown/Dropdown.scss
@@ -1,17 +1,17 @@
 .container {
     position: relative;
     display: grid;
-    grid-column-start: 5;
+    grid-column-start: 4;
     justify-content: end; 
     
       .button {
         width: 50px;
         padding: 0;
-        background-color: inherit;
+        outline: 0;
         border: 0;
+        background-color: inherit;
         color: white;
         cursor: pointer;
-        outline: 0;
         font-size: 30px;
       }
 
@@ -20,26 +20,28 @@
         top: 100%;
         left: 0;
         width: 200px;
+        padding: 10px 0;
         z-index: 2;
         background-color: rgb(27, 63, 29);
         border: 1px solid rgba(0, 0, 0, 0.04);
-        box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14);
+        box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 1);
         
         ul {
             list-style: none;
             padding: 0;
             margin: 0;
-        }
         
-        a {
-            text-decoration: none;
-
-            li {
-                padding: 5px;
+            a {
                 text-decoration: none;
-                color: white;
-                font-size: 18px; 
-                font-weight: bold;
+
+                li {
+                    padding: 5px;
+                    margin-left: 5px;
+                    text-decoration: none;
+                    color: white;
+                    font-size: 18px; 
+                    font-weight: bold;
+                }
             }
         }
           
