--- a/client/src/components/Navbar/Navbar.scss
+++ b/client/src/components/Navbar/Navbar.scss
@@ -1,38 +1,60 @@
 .navContainer {
     width: 100%;
-    display: grid;
-    grid-template-columns: 2fr 2fr 1fr 1fr 1fr;
+    height: 3.5em;
     
-    .navMenu{
+    .navTop{
+        display: grid; 
+        grid-template-columns: auto 1fr 1fr auto; 
+        width: 100%;
+        height: 1.75em;
+        background-color: #000000;
+        color: white;
+        align-self: center;
+
+        .top-left {
+            position: relative;
+            height: 100%;
+
+            p { 
+                margin: 5px 30px;
+            }
+        }
+
+        .top-right {
+            grid-column-start: 4;
+            margin: 5px 50px;
+
+            span {
+                padding: 8px;
+                
+                a {
+                    color: white;
+                    margin: 5px;
+                    text-decoration: none;
+                }
+            }
+        }
+    }
+
+    .navBottom{
         display: grid;
         align-items: center;
-        background-color:rgba(27, 63, 29, 0.692);
-        grid-column-start: 1; 
-        grid-column-end: 6; 
+        grid-template-columns: 2fr 2fr 1fr 1fr 1fr;
+        background-color:rgba(63, 150, 68, 0.692);
+        padding: 20px 0; 
         
         .logo {
             text-decoration: none;
             width: 100%;
-            font-size: 32px; 
-            padding: 0 10px;
+            font-size: 36px; 
             font-weight: bold;
-            grid-column-end: 2; 
             color: white;
         }
 
         .cartIcon {
             display: grid;
-            grid-column-start: 6; 
-            font-size: 20px;
-
-            span {
-                width: 100%;
-            }
-
-            // span:hover {
-            //     background-color:rgba(15, 29, 16, 0.692); 
-            // }  
-
+            grid-column-start: 5; 
+            font-size: 25px;
         }
 
         span { 
