--- a/client/src/components/Home/Content/Products/products.scss
+++ b/client/src/components/Home/Content/Products/products.scss
@@ -22,22 +22,17 @@
 
     .product-list {
         display: grid;
-        grid-template-columns: auto auto auto auto;
-        grid-template-rows: auto auto;
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
         position: relative;
-        grid-row: 2;
-        grid-column: 2;
         width: 100%;
-        padding-right: 15px;
-        padding-left: 15px;
+        padding: 0 15px;
 
         .product-card {
-            display: grid;
-            grid-template-rows: auto auto;
             border-radius: 1%;
+            grid-area: 'bike';
             margin: 15px 25px;
-            height: 280px;
-            width: 290px;
+            height: 50%;
+            width: 75%;
 
             .image {
                 position: relative;
@@ -109,6 +104,7 @@
                     justify-self: end;
 
                     h4 {
+                        font-size: 1.2em;
                         color: rgb(0, 32, 119);
                     }
                 }
@@ -117,8 +113,3 @@
     }
 }
 
-@media (min-width: 1200px) {
-    .product-list {
-        max-width: 1200px;
-    }
-}
