--- a/client/src/components/Home/Content/ServicesList/ServicesList.scss
+++ b/client/src/components/Home/Content/ServicesList/ServicesList.scss
@@ -1,59 +1,59 @@
-.image-container {
-    // display: grid;
+.image-list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 250px;
+    margin: 30px 15px;
+    padding: 20px 10px;
+    justify-content: center;
+    grid-gap: 0 30px;
 
-    .image-list {
+    .image {
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: 250px;
-        margin: 30px 15px;
-        padding: 20px 10px;
-        justify-content: center;
-        grid-gap: 0 30px;
+        width: 100%;
+        grid-row: 100px;
+        position: relative;
+        box-sizing: border-box;
 
-        .image {
+        .button-actions {
             display: grid;
+            height: 100%;
             width: 100%;
-            grid-row: 100px;
-            position: relative;
-            box-sizing: border-box;
+            position: absolute;
+            justify-items: center;
+            align-items: center;
+            top: 0;
+            background-color: rgba(0, 0, 0, 0.76);
+            opacity: 0;
 
-            .button-actions {
-                display: grid;
-                height: 100%;
-                width: 100%;
-                position: absolute;
-                justify-items: center;
-                align-items: center;
-                top: 0;
-                background-color: rgba(0, 0, 0, 0.76);
-                opacity: 0;
-
-                button {
-                    padding: 20px 40px;
-                    cursor: pointer;
-                    font-size: 20px;
-                    background-color: transparent;
-                    color: white;
-                }
-
-                button:focus {
-                    outline: none;
-                }
-
+            button {
+                padding: 20px 40px;
+                cursor: pointer;
+                font-size: 20px;
+                background-color: transparent;
+                color: white;
             }
 
-            .button-actions:hover {
-                opacity: 1;
-            }
-
-            img {
-                width: 100%;
-                height: 100%;
+            button:focus {
+                outline: none;
             }
         }
-        @media (max-width: 690px) {
-            // grid-template-columns: 1fr;
-            grid-template-rows: repeat(3, 1fr);
+
+        .button-actions:hover {
+            opacity: 1;
         }
+
+        img {
+            width: 100%;
+            height: 100%;
+        }
+    }
+
+    @media (max-width: 915px) {
+        display: grid;
+        grid-template-rows: repeat(3, 100px);
+        grid-template-columns: 1fr;
+        height: 1000px;
+        padding: 0;
+        margin: 0;
     }
 }
