--- a/client/src/components/Home/Content/Hero/hero.scss
+++ b/client/src/components/Home/Content/Hero/hero.scss
@@ -16,14 +16,16 @@
         .hero-content {
             display: grid;
             width: 500px;
+            height: 100%; 
             grid-gap: 0;
-            margin: 2.5em 0;
+            // margin: 2.5em 0;
             align-self: center;
+            align-items: center;
             justify-items: center;
 
             h1 {
                 color: white;
-                font-size: 40px;
+                font-size: 2em;
                 font-weight: bolder;
                 text-align: center;
                 margin: 0;
@@ -47,6 +49,22 @@
                 outline: none;
                 background-color: rgb(4, 82, 248);
             }
+
+            @media (max-width: 515px) {
+                width: 100%;
+                height: 20%;
+                // justify-self: center;
+            }
+        }
+
+        @media (max-width: 515px) {
+            width: 300px;
+            height: 80%;
+            justify-self: center;
+
+            * {
+                font-size: 0.8em;
+            }
         }
     }
 }
@@ -56,9 +74,9 @@
         transform: translateX(1000px);
     }
 
-    80% { 
+    80% {
         transform: translateX(0px);
     }
- 
+
 
 }
