--- a/client/src/components/Home/Content/ServicesList/ServicesList.scss
+++ b/client/src/components/Home/Content/ServicesList/ServicesList.scss
@@ -36,6 +36,10 @@
             button:focus {
                 outline: none;
             }
+
+            @media (max-width: 915px){
+                opacity: 1;
+            }
         }
 
         .button-actions:hover {
@@ -55,5 +59,6 @@
         height: 1000px;
         padding: 0;
         margin: 0;
+
     }
 }
