--- a/client/src/components/Home/Content/Sales/Sales.scss
+++ b/client/src/components/Home/Content/Sales/Sales.scss
@@ -86,6 +86,7 @@
 
             @media (max-width: 850px) {
                 width: 70%;
+                height: 500px;
 
                 img {
                     width: 100%;
@@ -117,6 +118,7 @@
 
         .sales-items-list {
             display: grid;
+            width: 100%;
             grid-template-columns: 1fr 1fr 1fr;
             grid-template-rows: 1fr 1fr;
 
@@ -133,11 +135,55 @@
                 grid-column: 3;
                 grid-row: 2;
             }
+
+            h3 {
+                color: #002077;
+                font-size: 1.4em;
+            }
+
+            @media (max-width: 1000px) {
+                display: grid;
+                grid-template-columns: auto;
+                grid-template-rows: 1fr 1fr 1fr;
+                width: 100%;
+
+                #prod-1 {
+                    grid-column: 1;
+                    grid-row: 1;
+                }
+
+                #prod-2 {
+                    grid-column: 1;
+                    grid-row: 2;
+                }
+
+                #prod-3 {
+                    grid-column: 1;
+                    grid-row: 3;
+                }
+
+                img {
+                    width: 100px;
+                    height: 100px;
+                }
+                
+                h3 {
+                    color: #002077;
+                    font-size: 1.4em;
+                }
+                h2 {
+                    font-size: 1em;
+                }
+
+            }
         }
 
         img {
-            width: 100%;
+            width: 200px;
+            height: 200px;
         }
+
+
     }
 
 }
